Created Test Branch

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Papyrus_60</string>
+    <string name="facebook_app_id">2518782285059973</string>
 </resources>
