--- a/react-native-react-native-recorder/android/src/main/res/values/strings.xml
+++ b/react-native-react-native-recorder/android/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
 	<string name="playback">Playback: %s</string>
 	<string name="zero_time">00:00</string>
 	<string name="empty">Empty</string>
-	<string name="no_records">Records is empty.</string>
+	<string name="no_records">Draft is empty.</string>
 	<string name="no_bookmarks">Bookmarks is empty.</string>
 	<string name="bookmarks">Bookmarks</string>
 	<string name="share_record">Share record: %s</string>
@@ -49,7 +49,7 @@
 	<string name="download">Download</string>
 	<string name="share">Share</string>
 	<string name="ask_to_rename">Show renaming dialog after stop recording</string>
-	<string name="record_moved_into_trash">Record moved to trash</string>
+	<string name="record_moved_into_trash">Record is Deleted</string>
 	<string name="all_records_deleted_successfully">All records deleted successfully</string>
 	<string name="record_deleted_successfully">Record deleted successfully</string>
 	<string name="record_restored_successfully">Record restored successfully</string>
